<resources>
    <string name="app_name">Symdroid</string>
    <string name="intro">Start the core query by pressing the search button below.\nThe list of registered sensors will be shown. By selecting one sensor, it will be queried through SymbIoTe.</string>
    <string name="snack_query_started">Started SymbIoTe core query - please stand by&#8230;</string>
    <string name="snack_reader_started">Started sensor reader - please stand by&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="p_header_parameter">Connection settings</string>
    <string name="p_core_aam_title">SymbIoTe Core</string>
    <string name="p_core_aam_summary">SymbIoTe Core URI: \'%s\'</string>
    <string name="resource_max_data_items">Maximum number of data items per req: %s</string>
    <string name="p_platform_id_title">Platform ID</string>
    <string name="p_platform_id_summary">\'%s\'</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Potrebno je odobriti korištenje podataka o lokaciji.</string>

    <string name="search">Search</string>
    <string name="platform_name">Platform name</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="observed_property">Observed property</string>
    <string name="type">Type</string>
    <string name="location_name">Location name</string>
    <string name="query_max_data_items">Maximum number of resources per search query: %s</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="max_timeout">Max api request timeout (ms): %s</string>
</resources>
